@@ -11,6 +11,8 @@ ewl_test_SOURCES		=	ewl_test.c \
 					ewl_box_test.c \
 					ewl_button_test.c \
 					ewl_entry_test.c \
+					ewl_seeker_test.c \
+					ewl_spinner_test.c \
 					ewl_text_test.c
 ewl_test_LDFLAGS		=	-static
 ewl_test_LDADD			=	$(top_builddir)/src/libewl.la @ebits_libs@ @ecore_libs@ @evas_libs@ @ewd_libs@
